versions/v2.9/modules/en/pages/security/rancher-security-best-practices.adoc
= {rancher-product-name} Security Best Practices
:page-languages: [en, zh]
:revdate: 2026-01-15
:page-revdate: {revdate}
:community-path: reference-guides/rancher-security/rancher-security-best-practices.adoc 
:product-path: security/rancher-security-best-practices.adoc
ifeval::["{build-type}" != "community"]
:xref-authn-authz: xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-authn-authz: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-config/index.adoc
endif::[]

== Restrict Public Access to /version and /rancherversion Path

The upstream (local) Rancher instance provides information about the Rancher version it is running and the Go version that was used to build it. That information is accessible via the `/version` path, which is used for tasks such as automating version bumps, or confirming that a deployment was successful. The upstream instance also provides Rancher version information accessible via the `/rancherversion` path.

Adversaries can misuse this information to identify the running Rancher version and cross-relate it with potential bugs to exploit. If your upstream Rancher instance is publicly available on the web, use a Layer 7 firewall to block `/version` and `/rancherversion`.

See https://owasp.org/www-project-web-security-testing-guide/stable/4-Web_Application_Security_Testing/02-Configuration_and_Deployment_Management_Testing/05-Enumerate_Infrastructure_and_Application_Admin_Interfaces.html[OWASP Web Application Security Testing - Enumerate Infrastructure and Application Admin Interfaces] for more information on protecting your server.

== Session Management

Some environments may require additional security controls for session management. For example, you may want to limit users' concurrent active sessions or restrict which geolocations those sessions can be initiated from. Such features are not supported by Rancher out of the box.

If you require such features, combine Layer 7 firewalls with {xref-authn-authz}#_external_vs_local_authentication[external authentication providers].

== Use External Load Balancers to Protect Vulnerable Ports

You should protect the following ports behind an xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/layer-4-and-layer-7-load-balancing.adoc#_layer_4_load_balancer[external load balancer] that has SSL offload enabled:

* *K3s:* Port 6443, used by the Kubernetes API.
* *RKE and RKE2:* Port 6443, used by the Kubernetes API, and port 9345, used for node registration.

These ports have TLS SAN certificates which list nodes' public IP addresses. An attacker could use that information to gain unauthorized access or monitor activity on the cluster. Protecting these ports helps mitigate against nodes' public IP addresses being disclosed to potential attackers.

=== Rancher Username Policy

By default, Kubernetes does not provide enforcement mechanisms for baseline username policies. In Rancher, this means that any enforcement of username formats, naming conventions, or baseline policies is expected to be handled by the external identity provider’s policies, if such policies are in place.

In Rancher, `admin` is the default username for the Administrator user, as highlighted xref:installation-and-upgrade/resources/bootstrap-password.adoc[here]

Examples of potential baseline policies include:

* Requiring usernames to follow an organizational convention (e.g.,`firstname.lastname`)
* Enforcing minimum or maximum length requirements
* Disallowing certain special characters
* Preventing impersonation by disallowing reserved names (e.g., `admin`, `root`)

Without these controls at the identity provider layer, there is a risk of inconsistent or insecure username practices, which can complicate access audits and lead to privilege escalation attempts.

[IMPORTANT]
====
Rancher currently enforces only a xref:rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc#_minimum_password_length[minimum password length].
====

*Recommendation:* We strongly advice that customers:

* Review and configure username baseline policies directly in their external identity providers (e.g., LDAP, Active Directory, SAML, or OIDC).
* Ensure that those policies align with the organization’s security and compliance requirements.
* Regularly audit user accounts to detect naming inconsistencies or policy violations.

For more information, see:

* https://cheatsheetseries.owasp.org/cheatsheets/Authentication_Cheat_Sheet.html[OWASP Cheat Sheet: Authentication]
* https://owasp.org/www-project-top-ten/2017/A2_2017-Broken_Authentication[OWASP Identity Management]

=== WAF Rules

Rancher is designed to support a wide range of deployment scenarios, including environments where customers may programmatically automate the creation or provisioning of large numbers of clusters. Imposing strict application-level limits within Rancher itself could interfere with legitimate workloads that require dynamic scaling.

For example:

* CI/CD pipelines may create and tear down clusters frequently.
* Self-service portals could provision clusters on-demand for developers.
* Test environments may generate high volumes of API calls.

*Risk:* Without appropriate rate limiting, adversaries could exploit unauthenticated or authenticated endpoints to:

* Exhaust resources (Denial of Service).
* Inflate storage costs.
* Degrade performance for legitimate users.

*Recommendation:* The most effective way to mitigate this risk is to implement rate limiting and abuse protection at the infrastructure or Web Application Firewall (WAF) layer. This approach allows thresholds to be tuned for each environment’s expected usage and scaling characteristics. Some examples of controls can be:

* Configuring a Web Application Firewall or API Gateway to enforce rate limits on sensitive operations, such as cluster creation and
provisioning.
* Defining thresholds based on baseline workload expectations (e.g., max requests per minute per client).
* Monitoring logs and alerting on anomalies to detect potential abuse.
* Apply a resource quota, which is a Rancher feature that limits the resources available to a project or namespace.

For more information, see:

* xref:cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc[Project Resource Quotas]
* https://owasp.org/API-Security/editions/2023/en/0xa4-lack-of-resources-rate-limiting/[OWASP API Security Top 10 - API4:2019 - Lack of Resources & Rate Limiting]
* https://cheatsheetseries.owasp.org/cheatsheets/Rate_Limiting_Cheat_Sheet.html[OWASP Cheat Sheet: Rate Limiting]
